feat: support up to three active projects
